// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopAppsByTrafficWidget should render Tabs: clientContent 1`] = `
@supports (-webkit-backdrop-filter:none) or (backdrop-filter:none) {

}

<svg
  baseProfile="full"
  height="800"
  style="position:absolute;left:0;top:0;user-select:none"
  version="1.1"
  width="1280"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <rect
    fill="none"
    fill-opacity="1"
    height="800"
    id="0"
    width="1280"
    x="0"
    y="0"
  />
  <g>
    <path
      d="M384 72A328 328 0 1 1 384 728L384 632A232 232 0 0 0 384 168Z"
      fill="#66B1E8"
      stroke="#FFFFFF"
      stroke-linejoin="round"
      stroke-width="2"
    />
    <path
      d="M384 728A328 328 0 0 1 72.0535 501.3576L163.3549 471.6919A232 232 0 0 0 384 632Z"
      fill="#EC7100"
      stroke="#FFFFFF"
      stroke-linejoin="round"
      stroke-width="2"
    />
    <path
      d="M72.0535 501.3576A328 328 0 0 1 72.0535 298.6424L163.3549 328.3081A232 232 0 0 0 163.3549 471.6919Z"
      fill="#F9C34B"
      stroke="#FFFFFF"
      stroke-linejoin="round"
      stroke-width="2"
    />
    <path
      d="M72.0535 298.6424A328 328 0 0 1 191.2064 134.6424L247.6338 212.3081A232 232 0 0 0 163.3549 328.3081Z"
      fill="#61C46E"
      stroke="#FFFFFF"
      stroke-linejoin="round"
      stroke-width="2"
    />
    <path
      d="M191.2064 134.6424A328 328 0 0 1 384 72L384 168A232 232 0 0 0 247.6338 212.3081Z"
      fill="#F095FF"
      stroke="#FFFFFF"
      stroke-linejoin="round"
      stroke-width="2"
    />
    <path
      d="M-5 -5l39 0l0 154l-39 0Z"
      fill="rgb(0,0,0)"
      fill-opacity="0"
      stroke="#ccc"
      stroke-width="0"
      transform="translate(709 328)"
    />
    <path
      d="M8 4A4 4 0 1 1 8 3.9996"
      fill="#66B1E8"
      stroke="#FFFFFF"
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-miterlimit="10"
      stroke-width="0"
      transform="translate(709 332)"
    />
    <path
      d="M13 -4l11 0l0 16l-11 0Z"
      fill="none"
      transform="translate(709 332)"
    />
    <text
      dominant-baseline="central"
      fill="#333333"
      style="font-size:10px;font-family:'Open Sans', sans-serif;"
      text-anchor="start"
      transform="translate(709 332)"
      x="13"
      y="4"
    >
      760_SV_WPA2
    </text>
    <path
      d="M8 4A4 4 0 1 1 8 3.9996"
      fill="#EC7100"
      stroke="#FFFFFF"
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-miterlimit="10"
      stroke-width="0"
      transform="translate(709 364)"
    />
    <path
      d="M13 -4l4 0l0 16l-4 0Z"
      fill="none"
      transform="translate(709 364)"
    />
    <text
      dominant-baseline="central"
      fill="#333333"
      style="font-size:10px;font-family:'Open Sans', sans-serif;"
      text-anchor="start"
      transform="translate(709 364)"
      x="13"
      y="4"
    >
      MESH
    </text>
    <path
      d="M8 4A4 4 0 1 1 8 3.9996"
      fill="#F9C34B"
      stroke="#FFFFFF"
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-miterlimit="10"
      stroke-width="0"
      transform="translate(709 396)"
    />
    <path
      d="M13 -4l16 0l0 16l-16 0Z"
      fill="none"
      transform="translate(709 396)"
    />
    <text
      dominant-baseline="central"
      fill="#333333"
      style="font-size:10px;font-family:'Open Sans', sans-serif;"
      text-anchor="start"
      transform="translate(709 396)"
      x="13"
      y="4"
    >
      CIOT_APs-WPA2_SV
    </text>
    <path
      d="M8 4A4 4 0 1 1 8 3.9996"
      fill="#61C46E"
      stroke="#FFFFFF"
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-miterlimit="10"
      stroke-width="0"
      transform="translate(709 428)"
    />
    <path
      d="M13 -4l3 0l0 16l-3 0Z"
      fill="none"
      transform="translate(709 428)"
    />
    <text
      dominant-baseline="central"
      fill="#333333"
      style="font-size:10px;font-family:'Open Sans', sans-serif;"
      text-anchor="start"
      transform="translate(709 428)"
      x="13"
      y="4"
    >
      DEV
    </text>
    <path
      d="M8 4A4 4 0 1 1 8 3.9996"
      fill="#F095FF"
      stroke="#FFFFFF"
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-miterlimit="10"
      stroke-width="0"
      transform="translate(709 460)"
    />
    <path
      d="M13 -4l14 0l0 16l-14 0Z"
      fill="none"
      transform="translate(709 460)"
    />
    <text
      dominant-baseline="central"
      fill="#333333"
      style="font-size:10px;font-family:'Open Sans', sans-serif;"
      text-anchor="start"
      transform="translate(709 460)"
      x="13"
      y="4"
    >
      Roaming_test_D
    </text>
    <path
      d="M-5 -5l10 0l0 10l-10 0Z"
      fill="rgb(0,0,0)"
      fill-opacity="0"
      stroke="#ccc"
      stroke-width="0"
      transform="translate(363.4 400)"
    />
    <path
      d="M0 0l0 0l0 0l0 0Z"
      fill="none"
      transform="translate(363.4 400)"
    />
  </g>
</svg>
`;

exports[`TopAppsByTrafficWidget should render Tabs: contentSwitcher 1`] = `
.c0 .ant-radio-group {
  border-radius: 20px;
  background-color: var(--acx-neutrals-20);
  vertical-align: top;
  overflow: hidden;
}

.c0 .ant-radio-button-wrapper {
  color: var(--acx-primary-black);
  background-color: transparent;
  border: none;
  box-shadow: none;
  border-radius: 20px;
}

.c0 .ant-radio-button-wrapper:not(:first-child)::before {
  display: none;
}

.c0 .ant-radio-button-wrapper-checked {
  color: var(--acx-primary-white);
  background-color: var(--acx-primary-black);
}

.c0 .ant-radio-button-wrapper span:nth-child(2) {
  vertical-align: middle;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .ant-radio-button-wrapper:not(.ant-radio-button-wrapper-checked,.ant-radio-button-wrapper-disabled):hover {
  background-color: var(--acx-neutrals-30);
}

.c0 svg {
  vertical-align: middle;
  margin-right: 8px;
}

.c0 path {
  stroke: var(--acx-primary-black);
}

.c0 .ant-radio-button-wrapper-checked path {
  stroke: var(--acx-primary-white);
}

.c0 .ant-radio-button-wrapper-checked {
  cursor: default;
}

.c0 .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled):hover {
  color: var(--acx-primary-white);
}

.c0 .ant-radio-group-small svg {
  width: var(--acx-body-4-font-size);
  height: var(--acx-body-4-font-size);
}

.c0 .ant-radio-group-small .ant-radio-button-wrapper {
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
  height: 24px;
}

.c0 .ant-radio-group-small .ant-radio-button-wrapper span:nth-child(2) {
  margin: 4px 16px;
}

.c0 .ant-radio-group-large svg {
  width: var(--acx-body-3-font-size);
  height: var(--acx-body-3-font-size);
}

.c0 .ant-radio-group-large .ant-radio-button-wrapper {
  font-size: var(--acx-body-3-font-size);
  line-height: var(--acx-body-3-line-height);
  height: 28px;
}

.c0 .ant-radio-group-large .ant-radio-button-wrapper span:nth-child(2) {
  margin: 4px 32px;
}

@supports (-webkit-backdrop-filter:none) or (backdrop-filter:none) {

}

<div
  style="text-align: right;"
>
  <div
    class="c0"
  >
    <div
      class="ant-radio-group ant-radio-group-outline ant-radio-group-small"
    >
      <label
        class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
      >
        <span
          class="ant-radio-button ant-radio-button-checked"
        >
          <input
            checked=""
            class="ant-radio-button-input"
            type="radio"
            value="traffic"
          />
          <span
            class="ant-radio-button-inner"
          />
        </span>
        <span>
          By Traffic
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper"
      >
        <span
          class="ant-radio-button"
        >
          <input
            class="ant-radio-button-input"
            type="radio"
            value="clients"
          />
          <span
            class="ant-radio-button-inner"
          />
        </span>
        <span>
          By Clients
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`TopAppsByTrafficWidget should render Tabs: trafficContent 1`] = `
@supports (-webkit-backdrop-filter:none) or (backdrop-filter:none) {

}

<svg
  baseProfile="full"
  height="800"
  style="position:absolute;left:0;top:0;user-select:none"
  version="1.1"
  width="1280"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <rect
    fill="none"
    fill-opacity="1"
    height="800"
    id="0"
    width="1280"
    x="0"
    y="0"
  />
  <g>
    <path
      d="M384 72A328 328 0 0 1 410.1511 726.9558L402.4971 631.2614A232 232 0 0 0 384 168Z"
      fill="#66B1E8"
      stroke="#FFFFFF"
      stroke-linejoin="round"
      stroke-width="2"
    />
    <path
      d="M410.1511 726.9558A328 328 0 0 1 80.3351 276.0176L169.2127 312.3051A232 232 0 0 0 402.4971 631.2614Z"
      fill="#EC7100"
      stroke="#FFFFFF"
      stroke-linejoin="round"
      stroke-width="2"
    />
    <path
      d="M80.3351 276.0175A328 328 0 0 1 306.1204 81.3799L328.9144 174.6346A232 232 0 0 0 169.2127 312.3051Z"
      fill="#F9C34B"
      stroke="#FFFFFF"
      stroke-linejoin="round"
      stroke-width="2"
    />
    <path
      d="M306.1204 81.3799A328 328 0 0 1 384 72L384 168A232 232 0 0 0 328.9144 174.6346Z"
      fill="#61C46E"
      stroke="#FFFFFF"
      stroke-linejoin="round"
      stroke-width="2"
    />
    <path
      d="M384 72L384 168Z"
      fill="#F095FF"
      stroke="#FFFFFF"
      stroke-linejoin="round"
      stroke-width="2"
    />
    <path
      d="M-5 -5l39 0l0 154l-39 0Z"
      fill="rgb(0,0,0)"
      fill-opacity="0"
      stroke="#ccc"
      stroke-width="0"
      transform="translate(709 328)"
    />
    <path
      d="M8 4A4 4 0 1 1 8 3.9996"
      fill="#66B1E8"
      stroke="#FFFFFF"
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-miterlimit="10"
      stroke-width="0"
      transform="translate(709 332)"
    />
    <path
      d="M13 -4l4 0l0 16l-4 0Z"
      fill="none"
      transform="translate(709 332)"
    />
    <text
      dominant-baseline="central"
      fill="#333333"
      style="font-size:10px;font-family:'Open Sans', sans-serif;"
      text-anchor="start"
      transform="translate(709 332)"
      x="13"
      y="4"
    >
      MESH
    </text>
    <path
      d="M8 4A4 4 0 1 1 8 3.9996"
      fill="#EC7100"
      stroke="#FFFFFF"
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-miterlimit="10"
      stroke-width="0"
      transform="translate(709 364)"
    />
    <path
      d="M13 -4l4 0l0 16l-4 0Z"
      fill="none"
      transform="translate(709 364)"
    />
    <text
      dominant-baseline="central"
      fill="#333333"
      style="font-size:10px;font-family:'Open Sans', sans-serif;"
      text-anchor="start"
      transform="translate(709 364)"
      x="13"
      y="4"
    >
      dot1
    </text>
    <path
      d="M8 4A4 4 0 1 1 8 3.9996"
      fill="#F9C34B"
      stroke="#FFFFFF"
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-miterlimit="10"
      stroke-width="0"
      transform="translate(709 396)"
    />
    <path
      d="M13 -4l14 0l0 16l-14 0Z"
      fill="none"
      transform="translate(709 396)"
    />
    <text
      dominant-baseline="central"
      fill="#333333"
      style="font-size:10px;font-family:'Open Sans', sans-serif;"
      text-anchor="start"
      transform="translate(709 396)"
      x="13"
      y="4"
    >
      Roaming_test_D
    </text>
    <path
      d="M8 4A4 4 0 1 1 8 3.9996"
      fill="#61C46E"
      stroke="#FFFFFF"
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-miterlimit="10"
      stroke-width="0"
      transform="translate(709 428)"
    />
    <path
      d="M13 -4l11 0l0 16l-11 0Z"
      fill="none"
      transform="translate(709 428)"
    />
    <text
      dominant-baseline="central"
      fill="#333333"
      style="font-size:10px;font-family:'Open Sans', sans-serif;"
      text-anchor="start"
      transform="translate(709 428)"
      x="13"
      y="4"
    >
      760_SV_WPA2
    </text>
    <path
      d="M8 4A4 4 0 1 1 8 3.9996"
      fill="#F095FF"
      stroke="#FFFFFF"
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-miterlimit="10"
      stroke-width="0"
      transform="translate(709 460)"
    />
    <path
      d="M13 -4l16 0l0 16l-16 0Z"
      fill="none"
      transform="translate(709 460)"
    />
    <text
      dominant-baseline="central"
      fill="#333333"
      style="font-size:10px;font-family:'Open Sans', sans-serif;"
      text-anchor="start"
      transform="translate(709 460)"
      x="13"
      y="4"
    >
      CIOT_APs-WPA2_SV
    </text>
    <path
      d="M-5 -5l10 0l0 10l-10 0Z"
      fill="rgb(0,0,0)"
      fill-opacity="0"
      stroke="#ccc"
      stroke-width="0"
      transform="translate(363.4 400)"
    />
    <path
      d="M0 0l0 0l0 0l0 0Z"
      fill="none"
      transform="translate(363.4 400)"
    />
  </g>
</svg>
`;

exports[`TopAppsByTrafficWidget should render for empty data: NoData 1`] = `
<DocumentFragment>
  .c3 {
  width: 16px;
  height: 16px;
}

.c3 path {
  stroke: var(--acx-neutrals-50);
}

.c3 circle {
  fill: var(--acx-neutrals-50);
}

.c1 {
  height: 100%;
  width: 100%;
}

.c1 .ant-card {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 8px;
  padding: 12px 16px;
  border: 1px solid var(--acx-neutrals-20);
  box-shadow: 0px 2px 4px rgba(51,51,51,0.08);
}

.c1 .ant-card-head {
  padding: 0;
  border-bottom: none;
  min-height: 0;
  margin-bottom: 10px;
}

.c1 .ant-card-head-title {
  padding: 0;
}

.c1 .ant-card-head-title .ant-space .ant-space-item:last-child {
  line-height: 0;
}

.c1 .ant-card-head-wrapper {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c1 .ant-card-extra {
  padding: 0;
}

.c1 .ant-card-body {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0;
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
}

.c2 {
  font-family: var(--acx-accent-brand-font);
  font-size: var(--acx-headline-4-font-size);
  line-height: var(--acx-headline-4-line-height);
  color: var(--acx-primary-black);
  font-weight: var(--acx-headline-4-font-weight-bold);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c4 .ant-radio-group {
  border-radius: 20px;
  background-color: var(--acx-neutrals-20);
  vertical-align: top;
  overflow: hidden;
}

.c4 .ant-radio-button-wrapper {
  color: var(--acx-primary-black);
  background-color: transparent;
  border: none;
  box-shadow: none;
  border-radius: 20px;
}

.c4 .ant-radio-button-wrapper:not(:first-child)::before {
  display: none;
}

.c4 .ant-radio-button-wrapper-checked {
  color: var(--acx-primary-white);
  background-color: var(--acx-primary-black);
}

.c4 .ant-radio-button-wrapper span:nth-child(2) {
  vertical-align: middle;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 .ant-radio-button-wrapper:not(.ant-radio-button-wrapper-checked,.ant-radio-button-wrapper-disabled):hover {
  background-color: var(--acx-neutrals-30);
}

.c4 svg {
  vertical-align: middle;
  margin-right: 8px;
}

.c4 path {
  stroke: var(--acx-primary-black);
}

.c4 .ant-radio-button-wrapper-checked path {
  stroke: var(--acx-primary-white);
}

.c4 .ant-radio-button-wrapper-checked {
  cursor: default;
}

.c4 .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled):hover {
  color: var(--acx-primary-white);
}

.c4 .ant-radio-group-small svg {
  width: var(--acx-body-4-font-size);
  height: var(--acx-body-4-font-size);
}

.c4 .ant-radio-group-small .ant-radio-button-wrapper {
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
  height: 24px;
}

.c4 .ant-radio-group-small .ant-radio-button-wrapper span:nth-child(2) {
  margin: 4px 16px;
}

.c4 .ant-radio-group-large svg {
  width: var(--acx-body-3-font-size);
  height: var(--acx-body-3-font-size);
}

.c4 .ant-radio-group-large .ant-radio-button-wrapper {
  font-size: var(--acx-body-3-font-size);
  line-height: var(--acx-body-3-line-height);
  height: 28px;
}

.c4 .ant-radio-group-large .ant-radio-button-wrapper span:nth-child(2) {
  margin: 4px 32px;
}

.c0 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.c5 {
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 100%;
  padding: 0 16px;
}

.c6 {
  text-align: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.c6 .ant-empty-normal {
  margin: 0;
  margin-block-end: 17px;
}

.c7 {
  font-family: var(--acx-neutral-brand-font);
  font-weight: var(--acx-body-4-font-weight);
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
  color: var(--acx-primary-black);
}

@supports (-webkit-backdrop-filter:none) or (backdrop-filter:none) {

}

<div
    class="c0"
  >
    <div
      class="c1"
      type="default"
    >
      <div
        class="ant-card"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 4px;"
                >
                  <div
                    class="c2"
                  >
                    Top Wi-Fi Networks
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <svg
                    class="c3"
                    data-testid="HistoricalOutlined"
                  />
                </div>
              </div>
            </div>
            <div
              class="ant-card-extra"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              />
            </div>
          </div>
        </div>
        <div
          class="ant-card-body"
        >
          <div
            style="overflow: visible; height: 0px; width: 0px;"
          >
            <div
              style="display: block; height: 800px; width: 1280px; margin: -38px 0px 0px 0px;"
            >
              <div
                style="text-align: right;"
              >
                <div
                  class="c4"
                >
                  <div
                    class="ant-radio-group ant-radio-group-outline ant-radio-group-small"
                  >
                    <label
                      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
                    >
                      <span
                        class="ant-radio-button ant-radio-button-checked"
                      >
                        <input
                          checked=""
                          class="ant-radio-button-input"
                          type="radio"
                          value="traffic"
                        />
                        <span
                          class="ant-radio-button-inner"
                        />
                      </span>
                      <span>
                        By Traffic
                      </span>
                    </label>
                    <label
                      class="ant-radio-button-wrapper"
                    >
                      <span
                        class="ant-radio-button"
                      >
                        <input
                          class="ant-radio-button-input"
                          type="radio"
                          value="clients"
                        />
                        <span
                          class="ant-radio-button-inner"
                        />
                      </span>
                      <span>
                        By Clients
                      </span>
                    </label>
                  </div>
                </div>
              </div>
              <div
                style="overflow: visible; height: 0px; width: 0px;"
              >
                <div
                  class="c5"
                  style="margin: 38px 0px 0px 0px;"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center c6 c7"
                  >
                    <div
                      class="ant-space-item"
                    >
                      No data to display
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="resize-triggers"
              >
                <div
                  class="expand-trigger"
                >
                  <div
                    style="width: 1281px; height: 801px;"
                  />
                </div>
                <div
                  class="contract-trigger"
                />
              </div>
            </div>
          </div>
          <div
            class="resize-triggers"
          >
            <div
              class="expand-trigger"
            >
              <div
                style="width: 1281px; height: 801px;"
              />
            </div>
            <div
              class="contract-trigger"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
